--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "license": "ISC",
   "author": "Daniel Pasion",
   "type": "commonjs",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "dev": "npx tsx index.ts"
   },
   "dependencies": {
+    "@elevenlabs/elevenlabs-js": "^2.12.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0"
