--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@elevenlabs/elevenlabs-js": "^2.12.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "openai": "^5.15.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
